--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,17 +1,17 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
 	<!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-	<id>gruvbox-material-dark</id>
-	<version>2.0.1</version>
+	<id>gruvbox-material-dark-harder</id>
+	<version>1.0.0</version>
 
 	<!-- Public plugin name should be written in Title Case.
 			 Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-	<name>Gruvbox Material Dark Theme</name>
+	<name>Gruvbox Material Dark Harder Theme</name>
 	<category>UI</category>
 
 	<!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-	<vendor email="ebyrdeu.khnykin@gmail.com" url="https://github.com/Ebyrdeu">
-		Maxim Khnykin
+	<vendor email="" url="https://github.com/lanAnderson">
+		Ian Anderson
 	</vendor>
 
 	<idea-version since-build="232"/>
@@ -20,7 +20,7 @@
 		 Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
 		 Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
 	<description><![CDATA[
-	Dark Theme - inspired by the <a href="https://github.com/sainnhe/gruvbox-material?tab=readme-ov-file">gruvbox-material</a>
+	Dark Harder Theme - inspired by the <a href="https://github.com/sainnhe/gruvbox-material?tab=readme-ov-file">gruvbox-material</a>
 	<br>
 	<br>
 	Supported Languages: Java, Rust, Go, Python, C/C++, JS/TS
@@ -29,15 +29,9 @@
 	<!-- Short summary of new features and bugfixes in the latest plugin version.
 		 Displayed on the Plugin Page and IDE Plugin Manager. Simple HTML elements can be included between <![CDATA[  ]]> tags. -->
 	<change-notes><![CDATA[
-<b>2.0.1</b>
+<b>1.0.0</b>
 <ul>
-	<li>Fixed Rust color scheme</li>
-	<li>Fixed Some things between dark and light themes</li>
-	<li>Adjusted bold parameter for private staff in Go</li>
-</ul>
-<b>2.0.0</b>
-<ul>
-	<li>added Islands Theme support</li>
+	<li>Initial</li>
 </ul>
   ]]></change-notes>
 
@@ -46,28 +40,12 @@
 	<depends>com.intellij.modules.platform</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
-		<themeProvider id="gruvbox-dark-hard-theme"
-		               path="/theme/gruvbox-material-dark-hard.theme.json"
+		<themeProvider id="gruvbox-dark-harder-theme"
+		               path="/theme/gruvbox-material-dark-harder.theme.json"
 		/>
 
-		<themeProvider id="gruvbox-dark-medium-theme"
-		               path="/theme/gruvbox-material-dark-medium.theme.json"
-		/>
-
-		<themeProvider id="gruvbox-dark-soft-theme"
-		               path="/theme/gruvbox-material-dark-soft.theme.json"
-		/>
-
-		<themeProvider id="islands-gruvbox-dark-hard-theme"
-		               path="/theme/islands-gruvbox-material-dark-hard.theme.json"
-		/>
-
-		<themeProvider id="islands-gruvbox-dark-medium-theme"
-		               path="/theme/islands-gruvbox-material-dark-medium.theme.json"
-		/>
-
-		<themeProvider id="islands-gruvbox-dark-soft-theme"
-		               path="/theme/islands-gruvbox-material-dark-soft.theme.json"
+		<themeProvider id="islands-gruvbox-dark-harder-theme"
+		               path="/theme/islands-gruvbox-material-dark-harder.theme.json"
 		/>
 	</extensions>
 </idea-plugin>
